--- a/src/pages/PickPet/PickPet.css
+++ b/src/pages/PickPet/PickPet.css
@@ -10,3 +10,15 @@
   font-size: 73px;
   margin: 20px 0;
 }
+
+@media only screen and (max-width: 495px) {
+  .pickpet-menu {
+    max-width: 100%;
+  }
+  .pickpet-title {
+    font-size: 50px;
+  }
+  .pickpet-description {
+    font-size: 15px;
+  }
+}
